catalog added favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-  <head>
+  <head class="page">
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <title>Техномарт</title>
   </head>
 
-  <body>
+  <body class="page-body">
     <header>
       <div class="header-top">
         <div class="container">
