--- a/catalog.html
+++ b/catalog.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-  <head>
+  <head class="page">
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css ">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <title>Техномарт перфораторы</title>
   </head>
 
-  <body>
+  <body class="page-body">
     <header>
       <div class="header-top">
         <div class="container">
