--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,7 @@
   <head class="page">
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css ">
     <link rel="icon" href="favicon.ico">
@@ -23,8 +22,12 @@
             <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип мазазина Техномарт">
           </a>
           <form class="form-block" action="https://echo.htmlacademy.ru/">
-            <button type="submit" class="search-button"><span class="visually-hidden">Кнопка поиска</span></button>
-            <input type="search" placeholder="Поиск:" class="search" name="search">
+            <input type="search" placeholder="Поиск:" class="search" name="search" id="site-search">
+            <label for="site-search">
+              <svg class="search-icon" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="test" fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+              </svg>
+            </label>
           </form>
           <a href="#" class="shopping-bar bookmarks-header">Закладки:</a>
           <a href="#" class="shopping-bar cart">Корзина:</a>
