--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
             <img src="img/logo-technomart.svg"  width="108" height="18" alt="Логотип магазина Техномарт">
           </a>
           <form class="form-block" action="https://echo.htmlacademy.ru/">
-            <input type="search" placeholder="Поиск:" class="search" name="search" id="site-search"/>
+            <input type="search" placeholder="Поиск:" class="search" name="search" id="site-search">
             <label for="site-search">
               <svg class="search-icon" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path class="test" fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
               </svg>
             </label>
-
           </form>
           <a href="#" class="shopping-bar bookmarks-header">Закладки:</a>
           <a href="#" class="shopping-bar cart">Корзина:</a>
@@ -102,8 +101,8 @@
           <a href="#">Все популярные товары</a>
         </div>
           <ul class="popular-item-list index-grid">
-            <li class="it1 gridit">
-              <img src="img/bfg6000.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+            <li class="index-it1 gridit">
+              <img class="bfg-9000" src="img/bfg9000.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
               <div class="label-new"></div>
               <div class="buying-bookmark">
                 <a  href="buy.html" class="buy">Купить</a>
@@ -113,7 +112,7 @@
               <p class="before-discount">30500 р.</p>
               <p class="actual-price">22500 р.</p>
             </li>
-            <li class="it2 gridit">
+            <li class="index-it2 gridit">
               <img src="img/bfg6000.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
               <div class="label-new"></div>
               <div class="buying-bookmark">
@@ -124,7 +123,7 @@
               <p class="before-discount">30500 р.</p>
               <p class="actual-price">22500 р.</p>
             </li>
-            <li class="it3 gridit">
+            <li class="index-it3 gridit">
               <img src="img/bfg6000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 6000">
               <div class="label-new"></div>
               <div class="buying-bookmark">
@@ -135,7 +134,7 @@
               <p class="before-discount">30500 р.</p>
               <p class="actual-price">22500 р.</p>
             </li>
-            <li class="it4 gridit">
+            <li class="index-it4 gridit">
               <img src="img/bfg3000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 3000">
               <div class="label-new"></div>
               <div class="buying-bookmark">
@@ -164,18 +163,30 @@
           <li><a><img src="img/metabo.png" width="220" height="145" alt="Логотип компании METABO"></a></li>
         </ul>
       </section>
-      <section class="services container">
-        <h2>Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!
-          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <ul>
+      <section class="services">
+        <div class="services__container container">
+          <h2>Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          </p>
+        </div>
+        <div class="container">
+        <ul class="services-menu">
           <li>Доставка</li>
           <li>Гарантия</li>
           <li>Кредит</li>
         </ul>
-        <h2>Доставка</h2>
-        <img src="img/truck-pic.svg" alt="Изображнеие грузовика">
-      </section>
+        <div class="services-menu__ship-text">
+          <h2>Доставка</h2>
+          <p> Мы с удовольствием доставим ваш товар прямо
+            к вашему подъезду совершенно бесплатно!
+          </p>
+          <p> Ведь мы неплохо заработаем,
+            поднимая его на ваш этаж!
+          </p>
+        </div>
+        </div>
+        </section>
       <div class="index-columns">
         <section class="company container">
           <div class="company-wrapper">
