add services-block credit

--- a/index.html
+++ b/index.html
@@ -166,25 +166,50 @@
       <section class="services">
         <div class="services__container container">
           <h2>Сервисы</h2>
-          <p>Хороший интернет-магазин отличается от плохого не только ценами!
+          <p>
+            Хороший интернет-магазин отличается от плохого не только ценами!
             Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
           </p>
         </div>
         <div class="container">
-        <ul class="services-menu">
-          <li>Доставка</li>
-          <li>Гарантия</li>
-          <li>Кредит</li>
-        </ul>
-        <div class="services-menu__ship-text">
-          <h2>Доставка</h2>
-          <p> Мы с удовольствием доставим ваш товар прямо
-            к вашему подъезду совершенно бесплатно!
-          </p>
-          <p> Ведь мы неплохо заработаем,
-            поднимая его на ваш этаж!
-          </p>
-        </div>
+          <ul class="services-menu">
+            <li>Доставка</li>
+            <li>Гарантия</li>
+            <li>Кредит</li>
+          </ul>
+          <div class="services-menu__ship-text">
+            <h2>Доставка</h2>
+            <p>
+              Мы с удовольствием доставим ваш товар прямо
+              к вашему подъезду совершенно бесплатно!
+            </p>
+            <p>
+              Ведь мы неплохо заработаем,
+              поднимая его на ваш этаж!
+            </p>
+          </div>
+          <div class="services-menu__guarantee-text">
+            <h2>Гарантия</h2>
+            <p>
+              Если купленный у нас товар поломается или заискрит,
+              a также в случае пожара, спровоцированного его
+              возгоранием,  вы всегда можете быть уверены в нашей
+            </p>
+            <p>
+              гарантии. Мы обменяем сгоревший товар на новый.
+              Дом уж восстановите как-нибудь сами.
+            </p>
+          </div>
+          <div class="services-menu__credit-text">
+            <h2>Кредит</h2>
+            <p>
+              Залезть в долговую яму стало проще!
+            </p>
+            <p>
+              Кредитные консультанты придут вам на помощь.
+            </p>
+            <a href="#">Отправить заявку</a>
+          </div>
         </div>
         </section>
       <div class="index-columns">
