add red lines .index-columns

--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
               Техномарт работает со многими транспортными компаниями:
             </p>
             <ul class="shipping-company">
-              <li><a href="blank.html">Деловые линии</a></li>
-              <li><a href="blank.html">Автротрейдинг</a></li>
-              <li><a href="blank.html">ЖелДорЭкспедиция</a></li>
+              <li class="shipping-company__del-lines"><a href="blank.html">Деловые линии</a></li>
+              <li class="shipping-company__autotraiding"><a href="blank.html">Автотрейдинг</a></li>
+              <li class="shipping-company__jeldor"><a href="blank.html">ЖелДорЭкспедиция</a></li>
             </ul>
             <a class="more-company" href="blank.html">Подробнее о компании</a>
           </div>
