--- a/catalog.html
+++ b/catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html  class="page" lang="ru">
 
-  <head class="page">
+  <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
