add icons for user menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           и инструментов для ремонта
         </h1>
         <div class="contacts-group">
-          <a href="#" class="phone" aria-label="Телефон для связи">+7 (812) 555-05-55</a>
+          <a href="tel:88125550555" class="phone" aria-label="Телефон для связи">+7 (812) 555-05-55</a>
           <address class="address" aria-label="Адрес">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
         </div>
         <div>
