--- a/catalog.html
+++ b/catalog.html
@@ -39,17 +39,29 @@
           Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта
         </p>
         <div class="contacts-group">
-          <a href="#" class="phone" aria-label="Телефон для связи">+7 (812) 555-05-55</a>
+          <a href="tel:88125550555" class="phone" aria-label="Телефон для связи">+7 (812) 555-05-55</a>
           <address class="address" aria-label="Адрес">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
         </div>
         <div class="user-info">
           <h2 class="visually-hidden">Личный кабинет</h2>
           <ul class="login-field">
-            <li><a href="#">Равшан Джамшутович</a></li>
-            <li><a href="#">#</a></li>
+            <li class="login-field__user-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
+              </svg>
+            </li>
+            <li class="login-field__username"><a href="#">Равшан Джамшутович</a></li>
+            <li class="login-field__logout"><a href="#" aria-label="Выход из профиля"></a>
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                <g fill="#c5c5c5">
+                  <path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
+                  <path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
+                </g>
+              </svg>
+            </li>
           </ul>
           <div class="user-navigation-sub">
-            <ul class="t">
+            <ul class="user-navigation-sub__menu">
               <li><a href="#">Мои заказы</a></li>
               <li class="unsub2"><a  href="#">Личный кабинет</a></li>
             </ul>
@@ -71,7 +83,7 @@
     <main >
       <div class="container">
         <ul class="breadcrumbs" aria-label="Навигационная цепочка">
-          <li><a href="index.html">Перейти на главную </a> </li>
+          <li><a href="index.html" aria-label="Перейти на главную"></a> </li>
           <li><a href="#">Каталог</a></li>
           <li><a href="#">Инструмент</a></li>
           <li><a>Перфораторы</a></li>
@@ -205,6 +217,7 @@
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
                 </div>
                 <h3><a href="#" class="item-title">Перфоратор BOSCH BFG 2000</a></h3>
+                <p class="before-discount"></p>
                 <p class="actual-price">12500 р.</p>
               </li>
               <li class="it7 gridit">
@@ -237,6 +250,7 @@
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
                 </div>
                 <h3><a href="#" class="item-title">Перфоратор BOSCH BFG 2000</a></h3>
+                <p class="before-discount"></p>
                 <p class="actual-price">12500 р.</p>
               </li>
             </ul>
@@ -301,13 +315,32 @@
             <h2 class="visually-hidden">Соцсети</h2>
             <ul class="social-list">
               <li>
-                <a href="#">Вконтакте</a>
+                <a class="social-button" href="#">
+                  <span class="visually-hidden">Вконтакте</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681
+                    1.727.534
+                    1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468
+                    2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664
+                    0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574
+                    0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389
+                    1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909
+                    6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
+                </a>
               </li>
               <li>
-                <a href="#">Фейсбук</a>
+                <a class="social-button"  href="#">
+                  <span class="visually-hidden">Фейсбук</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                    <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+                </a>
               </li>
               <li>
-                <a href="#">Инстаграм</a>
+                <a class="social-button" href="#">
+                  <span class="visually-hidden">Инстаграм</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                    <path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5
+                    6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+                </a>
               </li>
             </ul>
           </section>
