--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div>
           <h2 class="visually-hidden">Личный кабинет</h2>
           <ul class="user-navigation">
-            <li><a href="blank.html">Войти</a></li>
-            <li><a href="blank.html">Регистрация</a></li>
+            <li class="user-navigation__signup"><a href="blank.html">Войти</a></li>
+            <li class="user-navigation__registration"><a href="blank.html">Регистрация</a></li>
           </ul>
         </div>
       </div>
