--- a/catalog.html
+++ b/catalog.html
@@ -83,10 +83,10 @@
     <main >
       <div class="container">
         <ul class="breadcrumbs" aria-label="Навигационная цепочка">
-          <li><a href="index.html" aria-label="Перейти на главную"></a> </li>
+          <li><a href="index.html" aria-label="Перейти на главную"><img src="img/icon-home.svg"></a> </li>
           <li><a href="#">Каталог</a></li>
           <li><a href="#">Инструмент</a></li>
-          <li><a>Перфораторы</a></li>
+          <li class="breadcrumbs__current"><a>Перфораторы</a></li>
         </ul>
         <div class="title-wrapper">
           <h1 class="title">Перфораторы</h1>
