ascending descending sort styling

--- a/catalog.html
+++ b/catalog.html
@@ -144,11 +144,11 @@
           <section class="sorting-wrapper" >
             <h2 class="sorting-title">Сортировка:</h2>
             <ul class="sorting">
-              <li><a href="#">По цене</a></li>
-              <li><a href="#">По типу</a></li>
-              <li><a href="#">По функционалу</a></li>
-              <li><a href="#"><span class="visually-hidden">По возрастанию</span></a></li>
-              <li><a href="#"><span class="visually-hidden">По убыванию</span></a></li>
+              <li><a class="sorting__price" href="#">По цене</a></li>
+              <li><a class="sorting_type" href="#">По типу</a></li>
+              <li><a class="sorting__functionality" href="#">По функционалу</a></li>
+              <li><a class="sorting__ascending" href="#"><span class="visually-hidden">По возрастанию</span></a></li>
+              <li><a class="sorting__descending" href="#"><span class="visually-hidden">По убыванию</span></a></li>
             </ul>
           </section>
           <section>
