--- a/catalog.html
+++ b/catalog.html
@@ -106,22 +106,27 @@
             </fieldset>
             <hr>
             <fieldset class="manufacturers">
-              <legend  >Производители:</legend>
-              <ul >
-                <li>
-                  <label><input type="checkbox" id="filter-bosch" name="Bosch" checked>BOSCH</label>
+              <legend>Производители:</legend>
+              <ul>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" id="filter-bosch" name="Bosch" checked>
+                  <label for="filter-bosch">BOSCH</label>
                 </li>
-                <li>
-                  <label><input type="checkbox" id="filter-interskol" name="Interskol">ИНТЕРСКОЛ</label>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" id="filter-interskol" name="Interskol">
+                  <label for="filter-interskol">ИНТЕРСКОЛ</label>
                 </li>
-                <li>
-                  <label><input type="checkbox" id="filter-makita" name="Makita" checked>MAKITA</label>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" id="filter-makita" name="Makita" checked>
+                  <label for="filter-makita">MAKITA</label>
                 </li>
-                <li>
-                  <label><input type="checkbox" id="filter-dewalt" name="Dewalt">DEWALT</label>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" id="filter-dewalt" name="Dewalt">
+                  <label for="filter-dewalt">DEWALT</label>
                 </li>
-                <li>
-                  <label><input type="checkbox" id="filter-hitachi" name="Hitachi">HITACHI</label>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" id="filter-hitachi" name="Hitachi">
+                  <label for="filter-hitachi">HITACHI</label>
                 </li>
               </ul>
             </fieldset>
@@ -129,11 +134,13 @@
             <fieldset class="battery-type">
               <legend>Питание:</legend>
               <ul>
-                <li>
-                  <label><input type="radio" value="acc" name="battery" checked>Аккумуляторные</label>
+                <li class="filter-option filter-radio">
+                  <input class="visually-hidden filter-input-radio"  type="radio" id="filter-acc"  value="acc" name="battery" checked>
+                  <label for="filter-acc">Аккумуляторные</label>
                 </li>
-                <li>
-                  <label><input type="radio" value="net" name="battery">Сетевые</label>
+                <li class="filter-option filter-radio">
+                  <input class="visually-hidden filter-input-radio"  type="radio" id="filter-net" value="net" name="battery">
+                  <label for="filter-net">Сетевые</label>
                 </li>
               </ul>
             </fieldset>
@@ -156,7 +163,9 @@
             <ul class="item-list grid">
               <li class="it1 gridit">
                 <img src="img/bfg6000.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-                <div class="label-new"></div>
+                <div class="visually-hidden label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a  href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark" >В Закладки</a>
@@ -167,7 +176,9 @@
               </li>
               <li class="it2 gridit">
                 <img src="img/bfg6000.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-                <div class="label-new"></div>
+                <div class="visually-hidden label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -178,7 +189,9 @@
               </li>
               <li class="it3 gridit">
                 <img src="img/bfg6000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 6000">
-                <div class="label-new"></div>
+                <div class="label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -189,7 +202,9 @@
               </li>
               <li class="it4 gridit">
                 <img src="img/bfg3000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 3000">
-                <div class="label-new"></div>
+                <div class="label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -200,7 +215,9 @@
               </li>
               <li class="it5 gridit">
                 <img src="img/bfg6000.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-                <div class="label-new"></div>
+                <div class="visually-hidden label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -211,7 +228,9 @@
               </li>
               <li class="it6 gridit">
                 <img src="img/bfg2000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 2000">
-                <div class="label-new"></div>
+                <div class="label-new">
+                  <h4>New</h4>
+                </div>>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -222,7 +241,9 @@
               </li>
               <li class="it7 gridit">
                 <img src="img/bfg3000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 3000">
-                <div class="label-new"></div>
+                <div class="label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -233,7 +254,9 @@
               </li>
               <li class="it8 gridit">
                 <img src="img/bfg6000.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-                <div class="label-new"></div>
+                <div class="visually-hidden label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -244,7 +267,9 @@
               </li>
               <li class="it9 gridit">
                 <img src="img/bfg2000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 2000">
-                <div class="label-new"></div>
+                <div class="label-new">
+                  <h4>New</h4>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
