--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
           <ul class="popular-item-list index-grid">
             <li class="index-it1 gridit">
               <img class="bfg-9000" src="img/bfg9000.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
-              <div class="label-new"></div>
+              <div class="visually-hidden label-new">
+                <h4>New</h4>
+              </div>
               <div class="buying-bookmark">
                 <a  href="buy.html" class="buy">Купить</a>
                 <a href="bookmarks.html" class="bookmark" >В Закладки</a>
@@ -114,7 +116,9 @@
             </li>
             <li class="index-it2 gridit">
               <img src="img/bfg6000.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-              <div class="label-new"></div>
+              <div class="label-new">
+                <h4>New</h4>
+              </div>
               <div class="buying-bookmark">
                 <a href="buy.html" class="buy">Купить</a>
                 <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -125,7 +129,9 @@
             </li>
             <li class="index-it3 gridit">
               <img src="img/bfg6000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 6000">
-              <div class="label-new"></div>
+              <div class="visually-hidden label-new">
+                <h4>New</h4>
+              </div>
               <div class="buying-bookmark">
                 <a href="buy.html" class="buy">Купить</a>
                 <a href="bookmarks.html" class="bookmark">В Закладки</a>
@@ -136,7 +142,9 @@
             </li>
             <li class="index-it4 gridit">
               <img src="img/bfg3000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 3000">
-              <div class="label-new"></div>
+              <div class="label-new">
+                <h4>New</h4>
+              </div>
               <div class="buying-bookmark">
                 <a href="buy.html" class="buy">Купить</a>
                 <a href="bookmarks.html" class="bookmark">В Закладки</a>
