decorative elements for index

--- a/catalog.html
+++ b/catalog.html
@@ -230,7 +230,7 @@
                 <img src="img/bfg2000.jpg" width="127" height="112" alt="Изображение перфоратора BOSCH BFG 2000">
                 <div class="label-new">
                   <h4>New</h4>
-                </div>>
+                </div>
                 <div class="buying-bookmark">
                   <a href="buy.html" class="buy">Купить</a>
                   <a href="bookmarks.html" class="bookmark">В Закладки</a>
