--- a/catalog.html
+++ b/catalog.html
@@ -83,7 +83,7 @@
     <main >
       <div class="container">
         <ul class="breadcrumbs" aria-label="Навигационная цепочка">
-          <li><a href="index.html" aria-label="Перейти на главную"><img src="img/icon-home.svg"></a> </li>
+          <li><a href="index.html"><img alt="Перейти на главную" src="img/icon-home.svg"></a> </li>
           <li><a href="#">Каталог</a></li>
           <li><a href="#">Инструмент</a></li>
           <li class="breadcrumbs__current"><a>Перфораторы</a></li>
