--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
           <ul class="services-menu">
             <li class="services-menu__item services-menu__current">Доставка</li>
             <li class="services-menu__item">Гарантия</li>
-            <li <li class="services-menu__item">Кредит</li>
+            <li class="services-menu__item">Кредит</li>
           </ul>
-          <div class="services-menu__ship-text ">
+          <div class="services-menu__ship-text">
             <h2>Доставка</h2>
             <p>
               Мы с удовольствием доставим ваш товар прямо
@@ -207,7 +207,7 @@
               поднимая его на ваш этаж!
             </p>
           </div>
-          <div class="visually-hidden services-menu__guarantee-text ">
+          <div class="visually-hidden services-menu__guarantee-text">
             <h2>Гарантия</h2>
             <p>
               Если купленный у нас товар поломается или заискрит,
