index modal pop up

--- a/index.html
+++ b/index.html
@@ -343,6 +343,32 @@
       </div>
     </footer>
 
+    <section class="modal modal-feedback">
+      <h2 class="visually-hidden">Форма обратной связи</h2>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <div class="feedback-form">
+          <p>
+            <label for="feedback-name">Ваше имя:</label>
+            <input id="feedback-name" name="name" aria-label="Введите имя" type="text" placeholder="Имя Фамилия">
+          </p>
+          <p>
+            <label for="feedback-email"> Ваш e-mail</label>
+            <input id="feedback-email" name="email" type="email" aria-label="Введите почту" placeholder="email@example.com">
+          </p>
+          <p>
+            <label class="feedback-text" aria-label="Введите текст" for="feedback-text">Текст письма:</label>
+            <textarea id="feedback-text" name="feedback-text" placeholder="В свободной форме"></textarea>
+          </p>
+        </div>
+        <div class="feedback-button__wrap">
+          <button class="feedback-button" type="submit">Отправить</button>
+        </div>
+      </form>
+      <button class="modal-close" aria-label="Закрыть" type="button"></button>
+    </section>
+    <section class="modal visually-hidden  modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1615635203092!5m2!1sru!2sru" width="943" height="459" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <button class="modal-close" aria-label="Закрыть" type="button"></button>
+    </section>
   </body>
-
-</html>
