finish catalog markup

--- a/catalog.html
+++ b/catalog.html
@@ -395,6 +395,15 @@
         </div>
       </div>
     </footer>
+
+    <section class="modal visually-hidden modal-add-to-cart">
+      <h2>Товар добавлен в корзину!</h2>
+      <ul class="modal-add-to-cart__buttons">
+        <li><a href="#">Оформить заказ</a></li>
+        <li class="modal-add-to-cart__return"><a href="#">Продолжить покупки</a></li>
+      </ul>
+      <button class="modal-close" aria-label="Закрыть" type="button"></button>
+    </section>
   </body>
 
 </html>
