--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       </div>
     </footer>
 
-    <section class="modal modal-feedback">
+    <section class="modal visually-hidden modal-feedback">
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
         <div class="feedback-form">
@@ -372,3 +372,4 @@
       <button class="modal-close" aria-label="Закрыть" type="button"></button>
     </section>
   </body>
+</html>
