fix(b10 b2) add minification, add prefix

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css ">
+    <link rel="stylesheet" href="css/style.min.css ">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/180.png">
@@ -99,18 +99,16 @@
               <div class="price-bar">
                 <div class="range-controls">
                   <div class="scale">
-                    <div class="bar"
-                    style= "width: 80%;
-                    margin-right: 20%"></div>
+                    <div class="bar"></div>
                   </div>
-                  <div class="toggle toggle-min" tabindex="0" style=" left: 5%"></div>
-                  <div class="toggle toggle-max" tabindex="0" style=" left: 70%"></div>
+                  <div class="toggle toggle-min" tabindex="0"></div>
+                  <div class="toggle toggle-max" tabindex="0"></div>
                 </div>
                 <div class="filter-price">
                   <label class="min-price">
                      <input type="number" name="min-price" value="0">
                   </label>
-                  <label class="max-price" style=" left: 80%">
+                  <label class="max-price">
                     <input type="number" name="max-price" value="30000">
                   </label>
                 </div>
