--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css ">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/180.png">
@@ -83,7 +83,7 @@
     <main >
       <div class="container">
         <ul class="breadcrumbs" aria-label="Навигационная цепочка">
-          <li><a href="index.html"><img alt="Перейти на главную" src="img/icon-home.svg"></a> </li>
+          <li><a href="index.html"><img alt="Перейти на главную" width="14" height="12" src="img/icon-home.svg"></a> </li>
           <li><a href="#">Каталог</a></li>
           <li><a href="#">Инструмент</a></li>
           <li class="breadcrumbs__current"><a>Перфораторы</a></li>
