--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css ">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/180.png">
@@ -177,7 +177,7 @@
           <li><a><img src="img/dewalt.png" width="220" height="145" alt="Логотип компании DEWALT"></a></li>
           <li><a><img src="img/interskol.png" width="220" height="145" alt="Логотип компании Интерскол"></a></li>
           <li><a><img src="img/hitachi.png" width="220" height="145" alt="Логотип компании HITACHI"></a></li>
-          <li><a><img src="img/LG.png" width="220" height="145" alt="Логотип компании LG"></a></li>
+          <li><a><img src="img/lg.png" width="220" height="145" alt="Логотип компании LG"></a></li>
           <li><a><img src="img/aeg.png" width="220" height="145" alt="Логотип компании AEG"></a></li>
           <li><a><img src="img/metabo.png" width="220" height="145" alt="Логотип компании METABO"></a></li>
         </ul>
